--- a/plugins/tripleo-undercloud/images.yml
+++ b/plugins/tripleo-undercloud/images.yml
@@ -21,6 +21,9 @@
       tar_images: "{{ install.images.files | default(tar_files[undercloud_version|openstack_release]) | default(tar_files[8])}}"
       tmp_oc_repos_dir: /tmp/oc_repos/yum.repos.d
       overcloud_image_file: overcloud-full.qcow2
+      amphora_image_file: overcloud-full.qcow2
+      amphora_image_rpm: octavia-amphora-image
+      amphora_image_dir: "/usr/share/openstack-octavia-amphora-images"
       rhos_release_rpm: "https://url.corp.redhat.com/rhos-release-latest-rpm"
   pre_tasks:
       - block:
