--- a/plugins/openstack/roles/bmc/vars/main.yml
+++ b/plugins/openstack/roles/bmc/vars/main.yml
@@ -9,6 +9,7 @@ bmc_rpms:
     - jq
 bmc_pip:
     - pyghmi
+    - openstack-virtual-baremetal
 rhos_release_rpm: "https://url.corp.redhat.com/rhos-release-latest-rpm"
 #Could be *rhos, rdo, cdn*
 bmc_subscribtion: "rhos"
