Make openstack plugin deploy and clean up in parallel
This should speed up roundtrips for bigger deployments as it takes quite a while
to wait for 20 servers to spawn one by one.

Change-Id: I321492c25526cf278bfccacd4665e3259265ac87

--- a/plugins/openstack/tasks/servers.yml
+++ b/plugins/openstack/tasks/servers.yml
@@ -20,6 +20,8 @@
   changed_when: false
 
 - name: Create instances
+  async: 1200
+  poll: 0
   vars:
       resources: "{{ lookup('file', inventory_dir + '/resources.yml') | from_yaml }}"
       secgroups: "{% if provision.anti.spoofing == true %}{{ topology_node.security_groups }}{% endif %}"
@@ -55,8 +57,18 @@
         #!/bin/bash
         for i in $(ip l | awk '$2 ~ /eth[1-9]/ {gsub(":", ""); print $2}'); do ip l set down dev $i; done
         {% endraw %}
-  register: servers
+  register: servers_create
   with_sequence: "count={{ node.value }}"
+
+- name: Check instance creation status
+  async_status:
+    jid: "{{ async_result_item.ansible_job_id }}"
+  loop: "{{ servers_create.results }}"
+  loop_control:
+    loop_var: "async_result_item"
+  register: servers
+  until: servers.finished
+  retries: 300
 
 # need to write all servers to file at once
 - name: save servers for registration
@@ -75,6 +87,7 @@
       wait: yes
       timeout: "{{ provision.os.server.timeout | int }}"
   register: floating_ips
+  retries: 5
   with_items: "{{ servers.results | map(attribute='server') | list }}"
 
 - name: Get flavor facts
