--- a/plugins/openstack/tasks/cleanup_resources.yml
+++ b/plugins/openstack/tasks/cleanup_resources.yml
@@ -13,14 +13,26 @@
   ignore_errors: yes
 
 - name: Cleanup servers
+  async: 1000
+  poll: 0
   os_server:
       cloud: "{{ provision.cloud | default(omit) }}"
       name: "{{ item.id }}"
       state: absent
       delete_fip: yes
   with_items: "{{ servers|default([]) }}"
-  register: servers_cleanup
+  register: servers_cleanup_async
   ignore_errors: yes
+
+- name: Check servers cleanup
+  async_status:
+    jid: "{{ async_result_item.ansible_job_id }}"
+  loop: "{{ servers_cleanup_async.results }}"
+  loop_control:
+    loop_var: "async_result_item"
+  register: servers_cleanup
+  until: servers_cleanup.finished
+  retries: 300
 
 # Block tasks are needed for shade >= 1.24.0
 - block:
