Fix introspection and tagging for deployments with more than 10 nodes
The moment you have for example compute-1 and compute-10 in the
deployment the awk check would grab more than expected.

Change-Id: I86b27e6621d9523f2a38d2a146ccc69884312aa9

--- a/plugins/tripleo-overcloud/tag.yml
+++ b/plugins/tripleo-overcloud/tag.yml
@@ -130,7 +130,7 @@
                   ironic_cli: "{{ (install.version|default(undercloud_version)|openstack_release < 14)|ternary('ironic node-list','openstack baremetal node list') }}"
               shell: |
                   source ~/stackrc
-                  {{ ironic_cli }} | awk '/{{ item.name | default(item) }}/ {print $2}'
+                  openstack baremetal node show {{ item.name | default(item) }} -f value -c uuid
               with_items: "{{ overcloud_facts.nodes | default([])}}"
               register: node_list
 
@@ -232,7 +232,7 @@
                         openstack baremetal node set $(openstack baremetal node show {{ node }} -c uuid -f value) \
                         --resource-class {{ item.name }}
                     else
-                        openstack baremetal node list|awk '/{{ node }}/ {print $2}'| \
+                        openstack baremetal node show {{ node }} -c uuid -f value | \
                         xargs -I{} openstack baremetal node set {} --resource-class {{ item.name }}
                     fi
                 {% endfor %}
