--- a/plugins/tripleo-overcloud/introspect.yml
+++ b/plugins/tripleo-overcloud/introspect.yml
@@ -96,7 +96,7 @@
       - name: set the root device for baremetal nodes (with size hint)
         shell: |
             source ~/stackrc
-            NODE_UUID=$({{ ironic_cli }} | awk '/{{ item.name | default(item) }}/ {print $2}' )
+            NODE_UUID=$(openstack baremetal node show {{ item.name | default(item) }} -f value -c uuid )
             ironic node-update ${NODE_UUID} add properties/root_device='{"size": {{ hostvars[item].disk  }} }'
             #TODO(skatlapa): Check if Ironic CLI BZ#1602066 affects baremetal update command
         with_items: "{{ groups['overcloud_nodes'] | default([])}}"
@@ -130,15 +130,15 @@
                     openstack baremetal node set \
                       --property root_device='{"{{item.hint}}":"{{item.hintvalue}}"}' {{ node }}
                 {% else %}
-                    ironic node-list|awk '/{{ node }}/ {print $2}'| \
+                    openstack baremetal node show {{ node }} -f value -c uuid | \
                     xargs -I{} ironic node-update {} add properties/root_device='{"{{item.hint}}":"{{item.hintvalue}}"}'
                 {% endif %}
                 else
                 {% if install.version|default(undercloud_version) |openstack_release > 9 %}
-                    openstack baremetal node list|awk '/{{ node }}/ {print $2}'| \
+                    openstack baremetal node show {{ node }} -f value -c uuid | \
                     xargs -I{} openstack baremetal node set {} --property root_device='{"{{item.hint}}":"{{item.hintvalue}}"}'
                 {% else %}
-                    ironic node-list|awk '/{{ node }}/ {print $2}'| \
+                    openstack baremetal node show {{ node }} -f value -c uuid | \
                     xargs -I{} ironic node-update {} add properties/root_device='{"{{item.hint}}":"{{item.hintvalue}}"}'
                 {% endif %}
                 fi
@@ -152,7 +152,7 @@
       - name: set deploy_interface option to direct
         shell: |
             source ~/stackrc
-            NODE_UUID=$({{ ironic_cli }} | awk '/{{ item.name | default(item) }}/ {print $2}' )
+            NODE_UUID=$(openstack baremetal node show -f value -c uuid {{ item.name | default(item) }})
             openstack baremetal node set --deploy-interface direct ${NODE_UUID}
         with_items: "{{ groups['overcloud_nodes'] | default([])}}"
         when:
@@ -206,7 +206,7 @@
       - name: switch pxe_ssh to the pxe_impi
         shell: |
             source ~/stackrc
-            NODE_UUID=$({{ ironic_cli }} | grep -w {{ item.key }} | awk '{print $2}' )
+            NODE_UUID=$(openstack baremetal node show -f value -c uuid {{ item.key }})
             openstack baremetal node set $NODE_UUID \
                 --driver pxe_ipmitool \
                 --driver-info ipmi_username={{ install.vbmc.username }} \
