--- a/plugins/tripleo-overcloud/ovb.yml
+++ b/plugins/tripleo-overcloud/ovb.yml
@@ -24,51 +24,17 @@
             dest: "{{ instack_output }}"
         when: not instack_input
 
+      - name: Read {{ ipmi_interface }} interface MTU value
+        command: "cat /sys/class/net/{{ ipmi_interface }}/mtu"
+        register: mtu_val
+        changed_when: False
 
-      - block:
-          - name: Set MTU values
-            command: "ip link set {{ ipmi_interface }} mtu {{ ovb_mtu_value }}"
-            loop:
-              - "{{ ipmi_interface }}"
-
-          - name: Save MTU values
-            lineinfile:
-                dest: "/etc/sysconfig/network-scripts/ifcfg-{{ item }}"
-                line: "MTU={{ ovb_mtu_value }}"
-                regexp: '^MTU='
-            loop:
-              - "{{ ipmi_interface }}"
-
-          - name: Ensure neutron will use needed MTU
-            lineinfile:
-                dest: "/etc/dnsmasq-ironic.conf"
-                line: "dhcp-option-force=26,{{ ovb_mtu_value }}"
-
-          - name: Restart neutron and ironic services
-            service:
-                name: "{{ item }}"
-                state: restarted
-            loop:
-                - "openstack-ironic-conductor"
-                - "neutron-server.service"
-                - "neutron-openvswitch-agent.service"
-                - "neutron-dhcp-agent.service"
-
-        become: yes
-        when: install.version|default(undercloud_version) | openstack_release < 14
-
-      - block:
-          - name: "Read {{ ipmi_interface }} interface MTU value"
-            command: "cat /sys/class/net/{{ ipmi_interface }}/mtu"
-            register: mtu_val
-          - name: Check if the right MTU was configured when deploying the undercloud
-            fail:
-                msg: |
-                    The Undercloud MTU should be {{ ovb_mtu_value }} in undercloud.conf.
-                    Deploy the undercloud with --config-options DEFAULT.local_mtu={{ ovb_mtu_value }}
-            when: mtu_val.stdout|int != ovb_mtu_value
-
-        when: install.version|default(undercloud_version) | openstack_release >= 14
+      - name: Check if the right MTU was configured when deploying the undercloud
+        fail:
+            msg: |
+                The Undercloud MTU should be {{ ovb_mtu_value }} in undercloud.conf, make sure
+                undercloud is deployed with local_mtu = {{ ovb_mtu_value }}.
+        when: mtu_val.stdout|int != ovb_mtu_value
 
       - name: Set neutron subnet quota to unlimited
         ignore_errors: true
