--- a/plugins/tripleo-undercloud/configure.yml
+++ b/plugins/tripleo-undercloud/configure.yml
@@ -105,6 +105,22 @@
                 content: 'nova::compute::ironic::max_concurrent_builds: 5'
                 dest: "{{ working_dir }}/hiera_override.yaml"
 
+          - block:
+              - name: get global mtu hieradata for neutron from local_mtu
+                command: 'awk -F= "/^local_mtu\s*=\s*/ {print $2}" ~/undercloud.conf'
+                register: local_mtu
+                changed_when: False
+
+              - name: set global mtu hieradata for neutron from local_mtu
+                lineinfile:
+                  path: "{{ working_dir }}/hiera_override.yaml"
+                  state: present
+                  line: "neutron::global_physnet_mtu: {{ local_mtu.stdout }}"
+                when:
+                    - local_mtu.stdout != ""
+            when:
+                - install.version|openstack_release < 14
+
           - name: set additional config via hieradata
             lineinfile:
               path: "{{ working_dir }}/hiera_override.yaml"
