--- a/plugins/openstack/tasks/servers.yml
+++ b/plugins/openstack/tasks/servers.yml
@@ -57,24 +57,79 @@
         #!/bin/bash
         for i in $(ip l | awk '$2 ~ /eth[1-9]/ {gsub(":", ""); print $2}'); do ip l set down dev $i; done
         {% endraw %}
-  register: servers
+  register: servers_creation
   retries: 5
   with_sequence: "count={{ node.value }}"
 
 - name: Check instance creation status
   async_status:
     jid: "{{ async_result_item.ansible_job_id }}"
-  loop: "{{ servers.results }}"
+  loop: "{{ servers_creation.results }}"
   loop_control:
     loop_var: "async_result_item"
-  register: async_poll_results
-  until: async_poll_results.finished
+  register: servers
+  until: servers.finished
   retries: 300
 
 # need to write all servers to file at once
 - name: save servers for registration
   set_fact:
-      server_list: "{{ server_list|default([]) + (async_poll_results.results | map(attribute='server') | list) }}"
+      server_list: "{{ server_list|default([]) + (servers.results | map(attribute='server') | list) }}"
+
+- block:
+      - name: Create volumes
+        async: 1200
+        poll: 0
+        os_volume:
+            cloud: "{{ provision.cloud | default(omit) }}"
+            state: present
+            wait: "{{ topology_node.wait | default(wait) }}"
+            timeout: "{{ provision.os.server.timeout | int }}"
+            size: 40
+            name: "{{ prefix }}{{ topology_node.name }}-{{ item|int - 1 }}-ceph"
+        register: volumes_creation
+        with_sequence: "count={{ node.value }}"
+
+      - name: Check volume creation status
+        async_status:
+          jid: "{{ async_result_item.ansible_job_id }}"
+        loop: "{{ volumes_creation.results }}"
+        loop_control:
+          loop_var: "async_result_item"
+        register: volumes
+        until: volumes.finished
+        retries: 300
+
+      - name: save volumes for registration
+        set_fact:
+            volume_list: "{{ volume_list|default([]) + (volumes.results | map(attribute='volume') | list) }}"
+
+      - name: Attach volumes to the ceph nodes
+        vars:
+            srv: "{{ servers.results | map(attribute='server') | list }}"
+            vol: "{{ volumes.results | map(attribute='volume') | list }}"
+        async: 1200
+        poll: 0
+        os_server_volume:
+            cloud: "{{ provision.cloud | default(omit) }}"
+            state: present
+            wait: "{{ topology_node.wait | default(wait) }}"
+            timeout: "{{ provision.os.server.timeout | int }}"
+            server: "{{ item.0.id }}"
+            volume: "{{ item.1.id }}"
+        register: volume_attach
+        loop: "{{ srv | zip(vol) | list }}"
+
+      - name: Check volume creation status
+        async_status:
+          jid: "{{ async_result_item.ansible_job_id }}"
+        loop: "{{ volume_attach.results }}"
+        loop_control:
+          loop_var: "async_result_item"
+        register: volumes_attached_results
+        until: volumes_attached_results.finished
+        retries: 300
+  when: "'ceph' in topology_node.groups"
 
 - name: Create floating IPs
   os_floating_ip:
@@ -89,7 +144,7 @@
       timeout: "{{ provision.os.server.timeout | int }}"
   register: floating_ips
   retries: 5
-  with_items: "{{ async_poll_results.results | map(attribute='server') | list }}"
+  with_items: "{{ servers.results | map(attribute='server') | list }}"
 
 - name: Get flavor facts
   os_flavor_facts:
