Optimise package install tasks
Using an item loop to install packages is very slow.
Passing the packages as a list will speed these tasks
up a bit.

Change-Id: Ib1646ea4edc79bafc2c3ace3140547b2b24e8479

--- a/infrared/common/roles/vbmc/tasks/cleanup.yml
+++ b/infrared/common/roles/vbmc/tasks/cleanup.yml
@@ -50,11 +50,10 @@
   - block:
     - name: Remove package if installed from rpm
       package:
-          name: "{{ item }}"
+          name:
+            - python-virtualbmc
+            - python2-virtualbmc
           state: absent
-      with_items:
-          - python-virtualbmc
-          - python2-virtualbmc
       changed_when: false
       failed_when: false
 
