--- a/plugins/rally/tasks/setup/rpm/main.yml
+++ b/plugins/rally/tasks/setup/rpm/main.yml
@@ -1,9 +1,8 @@
 - name: Install rally dependency
   become: yes
   package:
-      name: "{{ item }}"
+      name: "{{ setup.dependencies.defaults }}"
       state: present
-  with_items: "{{ setup.dependencies.defaults }}"
 
 - name: Install rally from rpm
   become: yes
