--- a/plugins/tripleo-undercloud/tasks/images/rpm.yml
+++ b/plugins/tripleo-undercloud/tasks/images/rpm.yml
@@ -2,9 +2,8 @@
 - name: install the RPM with the pre-built overcloud images
   become: yes
   package:
-      name: "{{ item }}"
+      name: "{{ install.images.url is defined | ternary(install.images.get('url', '').split(','), ['rhosp-director-images']) }}"
       state: latest
-  with_items: "{{ install.images.url is defined | ternary(install.images.get('url', '').split(','), ['rhosp-director-images']) }}"
 
 # todo(yfried): investigate gtar error "Warning: Cannot stat: No such file or directory")'
 - name: untar the images
