--- a/plugins/rally/tasks/setup/git/main.yml
+++ b/plugins/rally/tasks/setup/git/main.yml
@@ -1,9 +1,8 @@
 - name: Install devel packages for package build dependencies
   become: yes
   package:
-      name: "{{ item }}"
+      name: "{{ setup.packages }}"
       state: present
-  with_items: "{{ setup.packages }}"
 
 - name: Install pip using get-pip.py
   shell: |
