--- a/plugins/tempest/tasks/setup/git/main.yml
+++ b/plugins/tempest/tasks/setup/git/main.yml
@@ -10,9 +10,8 @@
 - name: Install devel packages for package build dependencies
   become: yes
   package:
-      name: "{{ item }}"
+      name: "{{ setup.packages }}"
       state: present
-  with_items: "{{ setup.packages }}"
 
 - name: Install pip
   become: yes
