--- a/plugins/tempest/tasks/setup/pip/main.yml
+++ b/plugins/tempest/tasks/setup/pip/main.yml
@@ -12,6 +12,7 @@
   package:
       name: "{{ setup.packages }}"
       state: present
+
 - name: Create venv with pip, setuptools and pbr
   pip:
       virtualenv: "{{ virtualenvs.tempest }}"
@@ -56,9 +57,8 @@
 - name: Install test dependency
   become: yes
   package:
-      name: "{{ item }}"
+      name: "{{ setup.dependencies[test.openstack.version|default(overcloud_version)|openstack_release|string]|default(setup.dependencies.defaults) }}"
       state: present
-  with_items: "{{ setup.dependencies[test.openstack.version|default(overcloud_version)|openstack_release|string]|default(setup.dependencies.defaults) }}"
 
 - name: Warning message
   debug:
