Optimise pip install tasks
Using an item loop to install packages is slower
than passing a list of all packages to the pip
module.

This patch converts as many of the pip module tasks
to use a named list as possible, while still catering
for the ability to pin any package via the CLI.

Where pip tasks implemented state=present/latest,
they have all been converted to use latest because
the result is still the same.

Change-Id: Ibbccf721d323954d8247d5072b008455cc70147f

--- a/plugins/openstack/roles/bmc/tasks/main.yml
+++ b/plugins/openstack/roles/bmc/tasks/main.yml
@@ -62,9 +62,18 @@
 
 - name: Install pip packages
   pip:
-      name: "{{ item }}"
-      version: "{{ ir_default_pip_versions[item] | default(omit) }}"
-  with_items: "{{ bmc_pip }}"
+      name: "{{ package_list }}"
+  vars:
+    package_list: >-
+      {%- set package_list = [] %}
+      {%- for package in bmc_pip %}
+      {%-   if ir_default_pip_versions[package] is defined %}
+      {%-     set _ = package_list.append(package ~ '==' ~ ir_default_pip_versions[package]) %}
+      {%-   else %}
+      {%-     set _ = package_list.append(package) %}
+      {%-   endif %}
+      {%- endfor %}
+      {{- package_list -}}
 
 - name: Deploy openstackbmc
   template:
