--- a/plugins/rally/tasks/setup/git/main.yml
+++ b/plugins/rally/tasks/setup/git/main.yml
@@ -12,11 +12,20 @@
 
 - name: Install required pip packages
   pip:
-      name: "{{ item }}"
-      version: "{{ ir_default_pip_versions[item] | default(omit) }}"
-      state: "{{ ir_default_pip_versions[item] is defined | ternary('present', 'latest') }}"
-  with_items: "{{ setup.pip_packages }}"
+      name: "{{ package_list }}"
+      state: latest
   become: yes
+  vars:
+    package_list: >-
+      {%- set package_list = [] %}
+      {%- for package in setup.pip_packages %}
+      {%-   if ir_default_pip_versions[package] is defined %}
+      {%-     set _ = package_list.append(package ~ '==' ~ ir_default_pip_versions[package]) %}
+      {%-   else %}
+      {%-     set _ = package_list.append(package) %}
+      {%-   endif %}
+      {%- endfor %}
+      {{- package_list -}}
 
 - name: Clone Rally from git repo
   git:
@@ -47,11 +56,21 @@
 
 - name: Install rally-openstack package
   pip:
-      name: "{{ item }}"
-      version: "{{ ir_default_pip_versions[item] | default(omit) }}"
-      state: "{{ ir_default_pip_versions[item] is defined | ternary('present', 'latest') }}"
+      name: "{{ package_list }}"
+      state: latest
       virtualenv: "{{ rally.path }}"
-  with_items:
+  vars:
+    package_list: >-
+      {%- set package_list = [] %}
+      {%- for package in packages %}
+      {%-   if ir_default_pip_versions[package] is defined %}
+      {%-     set _ = package_list.append(package ~ '==' ~ ir_default_pip_versions[package]) %}
+      {%-   else %}
+      {%-     set _ = package_list.append(package) %}
+      {%-   endif %}
+      {%- endfor %}
+      {{- package_list -}}
+    packages:
       - prettytable
       - cryptography
       - oslo.utils
@@ -59,7 +78,6 @@
       - git+git://git.openstack.org/openstack/rally-openstack@master
       - kubernetes
       - openstacksdk
-
   become: yes
   when: "{{ rally_version.stdout | version_compare('1.0.0', '>=') }}"
 
