--- a/plugins/tempest/tasks/configure/method/git.yml
+++ b/plugins/tempest/tasks/configure/method/git.yml
@@ -22,10 +22,20 @@
 - name: Create tempest conf venv with pip, setuptools and pbr
   pip:
       virtualenv: "{{ virtualenvs.tempest_conf }}"
-      name: "{{ item }}"
-      version: "{{ ir_default_pip_versions[item] | default(omit) }}"
-      state: "{{ ir_default_pip_versions[item] is defined | ternary('present', 'latest') }}"
-  with_items:
+      name: "{{ package_list }}"
+      state: latest
+  vars:
+    package_list: >-
+      {%- set package_list = [] %}
+      {%- for package in setup.pip_packages %}
+      {%-   if ir_default_pip_versions[package] is defined %}
+      {%-     set _ = package_list.append(package ~ '==' ~ ir_default_pip_versions[package]) %}
+      {%-   else %}
+      {%-     set _ = package_list.append(package) %}
+      {%-   endif %}
+      {%- endfor %}
+      {{- package_list -}}
+    packages:
       - pip
       - setuptools
       - pbr
