--- a/plugins/tempest/tasks/configure/method/pip.yml
+++ b/plugins/tempest/tasks/configure/method/pip.yml
@@ -12,9 +12,19 @@
   pip:
       virtualenv: "{{ virtualenvs.tempest_conf }}"
       name: "{{ item }}"
-      version: "{{ ir_default_pip_versions[item] | default(omit) }}"
-      state: "{{ ir_default_pip_versions[item] is defined | ternary('present', 'latest') }}"
-  with_items:
+      state: latest
+  vars:
+    package_list: >-
+      {%- set package_list = [] %}
+      {%- for package in packages %}
+      {%-   if ir_default_pip_versions[package] is defined %}
+      {%-     set _ = package_list.append(package ~ '==' ~ ir_default_pip_versions[package]) %}
+      {%-   else %}
+      {%-     set _ = package_list.append(package) %}
+      {%-   endif %}
+      {%- endfor %}
+      {{- package_list -}}
+    packages:
       - pip
       - setuptools
       - pbr
