Optimise pip install tasks
Using an item loop to install packages is slower
than passing a list of all packages to the pip
module.

This patch converts as many of the pip module tasks
to use a named list as possible, while still catering
for the ability to pin any package via the CLI.

Where pip tasks implemented state=present/latest,
they have all been converted to use latest because
the result is still the same.

Change-Id: Ibbccf721d323954d8247d5072b008455cc70147f

--- a/infrared/common/roles/shade/tasks/main.yml
+++ b/infrared/common/roles/shade/tasks/main.yml
@@ -39,12 +39,11 @@
   vars:
       venv_cmd: "{{ ansible_env.HOME }}/.local/bin/virtualenv"
   pip:
-      name: "{{ item }}"
+      name:
+        - setuptools>=39.0.0
+        - pip>=10.0.1
       virtualenv: "{{ shade_path_venv }}"
       virtualenv_command: "{{ (is_venv.stdout | bool) | ternary(omit, venv_cmd) }}"
-  with_items:
-    - setuptools>=39.0.0
-    - pip>=10.0.1
 
 - name: shade virtualenv deps
   vars:
