--- a/plugins/tripleo-undercloud/tasks/images/repos.yml
+++ b/plugins/tripleo-undercloud/tasks/images/repos.yml
@@ -46,7 +46,7 @@
       state: present
   when:
       - patched_rpms.results|selectattr('stat.exists', 'equalto', True)|list|length > 0
-      - "'octavia' in ls_result.stdout"
+      - "'octavia' in ls_result.stdout|default('')"
 
 - name: Prepare custom repository tmp directory
   include_tasks: prepare_tmp_repos.yml
@@ -82,7 +82,7 @@
       LIBGUESTFS_BACKEND: "{{ libguestfs_backend }}"
   command: "virt-copy-in -a {{ amphora_image_file }} {{ tmp_oc_repos_dir }} /etc/"
   when:
-      - "'octavia' in ls_result.stdout"
+      - "'octavia' in ls_result.stdout|default('')"
       - patched_rpms.results|selectattr('stat.exists', 'equalto', True)|list|length > 0
 
 - block:
@@ -132,7 +132,7 @@
   command: "virt-customize --selinux-relabel --update -a {{ amphora_image_file }}"
   when:
       - patched_rpms.results|selectattr('stat.exists', 'equalto', True)|list|length > 0
-      - "'octavia' in ls_result.stdout"
+      - "'octavia' in ls_result.stdout|default('')"
 
 - name: Uninstall packages from overcloud image
   environment:
