--- a/plugins/tripleo-undercloud/tasks/images/repos.yml
+++ b/plugins/tripleo-undercloud/tasks/images/repos.yml
@@ -78,6 +78,7 @@
   command: "virt-copy-in -a {{ overcloud_image_file }} {{ tmp_oc_repos_dir }} /etc/"
 
 - name: Push repository to amphora image
+  become: yes
   environment:
       LIBGUESTFS_BACKEND: "{{ libguestfs_backend }}"
   command: "virt-copy-in -a {{ amphora_image_file }} {{ tmp_oc_repos_dir }} /etc/"
@@ -126,13 +127,33 @@
   command: "virt-customize --selinux-relabel --update -a {{ overcloud_image_file }}"
   when: patched_rpms.results|selectattr('stat.exists', 'equalto', True)|list|length > 0
 
+- name: Create ISO image with patched RPMs
+  command: genisoimage -J -R -V RPMS -o /tmp/patched_rpms.iso /patched_rpms
+
 - name: Do package update inside of amphora image with custom repository enabled
+  become: yes
   environment:
       LIBGUESTFS_BACKEND: "{{ libguestfs_backend }}"
-  command: "virt-customize --selinux-relabel --update -a {{ amphora_image_file }}"
+  command: |
+    virt-customize --selinux-relabel \
+      --attach /tmp/patched_rpms.iso \
+      --run-command "mkdir -p /patched_rpms" \
+      --run-command "mount LABEL=RPMS /patched_rpms" \
+      --run-command "sed -i 's|enabled=0|enabled=1|' /etc/yum.repos.d/patched_rpms.repo" \
+      --run-command "sed -i 's|enabled=1|enabled=0|' /etc/yum/pluginconf.d/subscription-manager.conf" \
+      --run-command "sed -i.bak 's|^hosts:.*|hosts: files dns myhostname|' /etc/nsswitch.conf" \
+      --update -a {{ amphora_image_file }} \
+      --run-command "mv /etc/nsswitch.conf.bak /etc/nsswitch.conf" \
+      --run-command "sed -i 's|enabled=0|enabled=1|' /etc/yum/pluginconf.d/subscription-manager.conf" \
+      --run-command "rm -f /etc/yum.repos.d/patched_rpms.repo"
   when:
       - patched_rpms.results|selectattr('stat.exists', 'equalto', True)|list|length > 0
       - "'octavia' in ls_result.stdout|default('')"
+
+- name: Delete patched RPMs ISO image
+  file:
+    path: /tmp/patched_rpms.iso
+    state: absent
 
 - name: Uninstall packages from overcloud image
   environment:
