--- a/plugins/tripleo-undercloud/tasks/images/repos.yml
+++ b/plugins/tripleo-undercloud/tasks/images/repos.yml
@@ -39,15 +39,6 @@
   failed_when: false
   when: patched_rpms.results|selectattr('stat.exists', 'equalto', True)|list|length > 0
 
-- name: Install amphora image package
-  become: yes
-  package:
-      name: "{{ amphora_image_rpm }}"
-      state: present
-  when:
-      - patched_rpms.results|selectattr('stat.exists', 'equalto', True)|list|length > 0
-      - "'octavia' in ls_result.stdout|default('')"
-
 - name: Prepare custom repository tmp directory
   include_tasks: prepare_tmp_repos.yml
   when: repo_config.stat.exists
@@ -77,10 +68,37 @@
       LIBGUESTFS_BACKEND: "{{ libguestfs_backend }}"
   command: "virt-copy-in -a {{ overcloud_image_file }} {{ tmp_oc_repos_dir }} /etc/"
 
-- name: Push repository to amphora image
-  environment:
-      LIBGUESTFS_BACKEND: "{{ libguestfs_backend }}"
-  command: "virt-copy-in -a {{ amphora_image_file }} {{ tmp_oc_repos_dir }} /etc/"
+- name: Patch amphora image
+  become: yes
+  block:
+    - name: Install amphora image package
+      package:
+          name: "{{ amphora_image_rpm }}"
+          state: present
+
+    - name: Push repository to amphora image
+      environment:
+          LIBGUESTFS_BACKEND: "{{ libguestfs_backend }}"
+      command: "virt-copy-in -a {{ amphora_image_file }} {{ tmp_oc_repos_dir }} /etc/"
+
+    - name: Copy patched RPMs to amphora image
+      environment:
+          LIBGUESTFS_BACKEND: "{{ libguestfs_backend }}"
+      command: "virt-copy-in -a {{ amphora_image_file }} /patched_rpms /"
+
+    - name: Do package update inside of amphora image with custom repository enabled
+      environment:
+          LIBGUESTFS_BACKEND: "{{ libguestfs_backend }}"
+      command: |
+        virt-customize -a {{ amphora_image_file }} \
+          --run-command "sed -i 's|enabled=0|enabled=1|' /etc/yum.repos.d/patched_rpms.repo" \
+          --run-command "sed -i 's|enabled=1|enabled=0|' /etc/yum/pluginconf.d/subscription-manager.conf" \
+          --run-command "sed -i.bak 's|^hosts:.*|hosts: files dns myhostname|' /etc/nsswitch.conf" \
+          --update \
+          --run-command "mv /etc/nsswitch.conf.bak /etc/nsswitch.conf" \
+          --run-command "sed -i 's|enabled=0|enabled=1|' /etc/yum/pluginconf.d/subscription-manager.conf" \
+          --run-command "rm -f /etc/yum.repos.d/patched_rpms.repo" \
+          --selinux-relabel
   when:
       - "'octavia' in ls_result.stdout|default('')"
       - patched_rpms.results|selectattr('stat.exists', 'equalto', True)|list|length > 0
@@ -125,14 +143,6 @@
       LIBGUESTFS_BACKEND: "{{ libguestfs_backend }}"
   command: "virt-customize --selinux-relabel --update -a {{ overcloud_image_file }}"
   when: patched_rpms.results|selectattr('stat.exists', 'equalto', True)|list|length > 0
-
-- name: Do package update inside of amphora image with custom repository enabled
-  environment:
-      LIBGUESTFS_BACKEND: "{{ libguestfs_backend }}"
-  command: "virt-customize --selinux-relabel --update -a {{ amphora_image_file }}"
-  when:
-      - patched_rpms.results|selectattr('stat.exists', 'equalto', True)|list|length > 0
-      - "'octavia' in ls_result.stdout|default('')"
 
 - name: Uninstall packages from overcloud image
   environment:
