--- a/plugins/openstack/tasks/cleanup_resources.yml
+++ b/plugins/openstack/tasks/cleanup_resources.yml
@@ -70,6 +70,9 @@
   with_items: "{{ routers|default([]) }}"
   register: routers_cleanup
   ignore_errors: yes
+  retries: 3
+  delay: 3
+  until: routers_cleanup.rc == 0
 
 - name: Cleanup subnets
   os_subnet:
@@ -79,6 +82,10 @@
   with_items: "{{ subnets|default([]) }}"
   register: subnets_cleanup
   ignore_errors: yes
+  ignore_errors: yes
+  retries: 3
+  delay: 3
+  until: subnets_cleanup.rc == 0
 
 - name: Cleanup networks
   os_network:
@@ -88,6 +95,9 @@
   with_items: "{{ networks|default([]) }}"
   register: networks_cleanup
   ignore_errors: yes
+  retries: 3
+  delay: 3
+  until: networks_cleanup.rc == 0
 
 - name: Cleanup security groups
   os_security_group:
@@ -97,6 +107,9 @@
   with_items: "{{ security_group_list | default([]) }}"
   register: sg_cleanup
   when: provision.anti.spoofing == true
+  retries: 3
+  delay: 3
+  until: sg_cleanup.rc == 0
 
 - name: Fail run if one of neutron cleanups tasks failed/skipped
   fail:
