Fix loadbalancer issues
This change improves and fixes the loadbalancer VM in a few ways:
1) It does not start haproxy before rebooting the VM
This is strictly needed because we're not manually bringing up the
network interfaces and so the haproxy service will fail to start
because it cannot bind to the right IP addresses

2) We leave selinux in enforcing
But we enable the boolean haproxy_connect_any

3) We add the haproxy stats socket
This is useful to programmatically query the haproxy status of the
backend services

4) We fix the mysql timeout which fixes the following warning:
Aug 19 05:30:07 loadbalancer-0 haproxy[15827]: [WARNING] 230/053007 (15827) : config : missing timeouts for proxy 'mysql'.
Aug 19 05:30:07 loadbalancer-0 haproxy[15827]:    | While not properly invalid, you will certainly encounter various problems
Aug 19 05:30:07 loadbalancer-0 haproxy[15827]:    | with such a configuration. To fix this, please ensure that all following
Aug 19 05:30:07 loadbalancer-0 haproxy[15827]:    | timeouts are set to a non-zero value: 'client', 'connect', 'server'.

5) It removes the need for network-scripts and moves the ifcfg files
to NetworkManager's control

6) It customizes the haproxy.service to wait for network-online
See https://www.freedesktop.org/wiki/Software/systemd/NetworkTarget/
By default it waits for network.target which is broken IMO as the IPs
won't be configured and without net.ipv4.ip_non_localbind = 1, haproxy
fails to start

7) Sets the hostname of the loadbalancer VM so it persists after reboot

Tested as follows:
- Deployed with loadbalancer:1
- Observed that the loadbalancer vm is configured correctly (haproxy
  started correctly, interfaces all up after reboot and correct
  hostname)

Change-Id: I1681bb5d853a5c9c3db4f8c244688b47a6fcde9c

--- a/plugins/tripleo-overcloud/roles/loadbalancer/tasks/main.yml
+++ b/plugins/tripleo-overcloud/roles/loadbalancer/tasks/main.yml
@@ -1,6 +1,9 @@
 ---
-- name: switch selinux to permissive
-  selinux: policy=targeted state=permissive
+- name: Set haproxy_connect_any flag on and keep it persistent across reboots
+  seboolean:
+    name: haproxy_connect_any
+    state: yes
+    persistent: yes
 
 #this is required to have the 22 port free on haproxy VIP's
 - name: setup ssh to listen on existing external IP
@@ -8,11 +11,6 @@
       dest: "/etc/ssh/sshd_config"
       line: "ListenAddress {{ hostvars[inventory_hostname].ansible_host|
                               default(hostvars[inventory_hostname].ansible_ssh_host) }}"
-
-# On RHEL8 network-scripts is not installed by default
-- name: Make sure the network-scripts package is installed
-  package: name=network-scripts state=present
-  when: install.version|default(undercloud_version)|openstack_release >= 15
 
 - name: setup ssh for loadbalancer to listen on external VIP
   lineinfile:
@@ -91,11 +89,21 @@
       src: haproxy.cfg.j2
       dest: /etc/haproxy/haproxy.cfg
 
-- name: start haproxy service
-  service:
-      name: haproxy
-      state: started
-      enabled: yes
+# NOTE(bandini): this is a bug in haproxy's default service file IMO
+- name: Make sure haproxy starts after the network is really up
+  template:
+      src: haproxy.service.j2
+      dest: /etc/systemd/system/haproxy.service
+
+- name: set hostname
+  hostname:
+      name: "{{ inventory_hostname }}.redhat.local"
+
+- name: update /etc/hosts with loadbalancer details
+  lineinfile:
+      dest: "/etc/hosts"
+      line: "127.0.0.1   {{ inventory_hostname }}.redhat.local {{ inventory_hostname }}"
+      state: present
 
 - name: reboot the loadbalancer
   command: "virsh reboot {{ inventory_hostname }}"
