Install tempest plugins within a user home directory
On OSP15 which uses RHEL8 and python3 by default installing
tempest downstream plugins from source fails due to some missing
global paths (e.g. /usr/local/lib/python3.6/site-packages) [1][2]
As actually there is no need to have plugins installed globally
we can avoid the mentioned problem by installing them within
a user home directory.

[1] https://rhos-qe-jenkins.rhev-ci-vms.eng.rdu2.redhat.com/job/OSPD-Customized-Deployment-virt/11707/artifact/.sh/03-ir-tempest.log
[2] https://projects.engineering.redhat.com/browse/RHOSINFRA-2577

Change-Id: I6470f207809372f1a05fd677d09e382640bd6fa7

--- a/plugins/tempest/tasks/setup/rpm/install_plugins_source.yml
+++ b/plugins/tempest/tasks/setup/rpm/install_plugins_source.yml
@@ -64,9 +64,9 @@
           requirements: "{{ plugins_reqs.stat.path }}"
       when: plugins_reqs.stat.exists
 
-- name: Install plugin packages globally to the system
-  become: yes
+- name: Install plugin packages to the user home directory
   pip:
       name: "{{ plugins_dir }}/{{ plugin_dict.key }}"
       state: present
       editable: true
+      extra_args: --user
