Ensure bmc node is always rhel-7.7 m1.small
If you are deploying OSP10z3 it is rhel-7.3 based which will fail.
We also don't need that many resources for node that just calls
openstack apis.

Change-Id: Ie5ff057eda9dede996e079a3b35f0b605cf293ba

--- a/plugins/openstack/defaults/topology/nodes/bmc.yml
+++ b/plugins/openstack/defaults/topology/nodes/bmc.yml
@@ -1,5 +1,7 @@
 name: bmc
-flavor: "m1.medium"
+flavor: "m1.small"
+image:
+    name: "rhel-7.7-server-x86_64-latest"
 interfaces:
     nic1:
         network: "external"
