Always set nameservers for ctlplane
We should pass undercloud nameservers down to ctlplane to ensure
that the overcloud nodes don't try to use undercloud as DNS by
default. For <OSP11 releases this config value is sadly ignored but
we will address that in separate commit.

Change-Id: I16748fc0b064c9cb6ad0c5421aaece86adb05da8

--- a/plugins/tripleo-undercloud/configure.yml
+++ b/plugins/tripleo-undercloud/configure.yml
@@ -39,6 +39,22 @@
         set_fact:
             working_dir: "/home/{{ install.user.name }}"
 
+      # We ingore anything with % as it's ipv6 address with local interface
+      - name: get nameservers
+        shell: awk '/%|#/ {next} /nameserver/ { ips=ips $2"," } END {print substr(ips, 1, length(ips)-1)}' /etc/resolv.conf
+        register: nameservers
+        changed_when: False
+
+      - name: Fail if no suitable nameserver found on undercloud
+        fail:
+            msg: "No suitable nameserver was found in /etc/resolv.conf"
+        when: nameservers.stdout == ''
+
+      - name: set undercloud_nameservers fact
+        set_fact:
+            undercloud_nameservers: "{{ nameservers.stdout }}"
+        when: nameservers.stdout != ''
+
       - name: template the undercloud.conf from local machine
         template:
             src: "{{ local_src }}"
